# AI-reserch

./: .dockerignore  .editorconfig  .env.example  .env.production.example  .gitattributes  .gitignore  AGENTS.md  Makefile  README.md  compose.production.yml  compose.shared-host.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml
apps/analytics/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/analytics/src/ai_quant_analytics/: __init__.py  _version.py  analysis.py  config.py  contracts.py  core_metrics.py  errors.py  fundamentals.py  health.py  insights.py  logging_config.py  main.py  middleware.py  normalization.py  scenarios.py  serialization.py  technicals.py
apps/analytics/tests/: __init__.py  conftest.py  factories.py  test_analysis_contract.py  test_config.py  test_core_metrics.py  test_fundamentals_scenarios.py  test_health.py  test_insights.py  test_logging.py  test_phase4_fundamental_valuation.py  test_phase4_market_metrics.py  test_phase4_technicals.py
apps/analytics/tests/fixtures/: phase4_market_golden.json
docs/: README.md  analytics-api.md  api.md  architecture.md  calculation-methodology.md  cloud-deployment.md  data-flow.md  data-model.md  data-sources.md  database-phase2.md  external-inputs.md  implementation-plan.md  llm-design.md  observability.md  openapi.yaml  operations-runbook.md  phase2-test-matrix.md  phase3-test-matrix.md  phase4-test-matrix.md  phase5-test-matrix.md  phase6-test-matrix.md  phase7-test-matrix.md  phase8-test-matrix.md  phase9-test-matrix.md  production-acceptance.md  progress.md  provider-extension-guide.md  provider-license-matrix.md  requirements.md  retention-policy.md  risk-register.md  roadmap.md  sec-xbrl-mapping.md  security.md  (+1 more)
(+424 files in other folders)
