[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-quant-analytics"
version = "0.1.0"
description = "Deterministic analytics service for AI Quant Research Assistant"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.139.0",
  "pydantic==2.13.4",
  "uvicorn==0.51.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "mypy==2.2.0",
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
  "ruff==0.15.21",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_quant_analytics = ["py.typed"]

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--cov=ai_quant_analytics",
  "--cov-report=term-missing",
]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["ai_quant_analytics"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "D203",
  "D213",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "D103",
  "PLR2004",
  "S101",
]

[tool.ruff.lint.isort]
known-first-party = ["ai_quant_analytics"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_configs = true
show_error_codes = true
pretty = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
